# grc-engineered

./: .env.example  .gitignore  README.md  SECURITY.md  audit_narrative_example.md  control_mapping_example.json  pyproject.toml  requirements.txt  run.bat  run.sh  vendor_profile_example.md
agents/: __init__.py  ai_registry_agent.py  audit_narrative_agent.py  base_agent.py  control_mapping_agent.py  evidence_reviewer_agent.py  policy_drafter_agent.py  questionnaire_responder_agent.py  tprm_triage_agent.py
core/: __init__.py  document_loader.py  memory.py  models.py  orchestrator.py  providers.py  vector_store.py
integrations/: __init__.py  drata_mock.py  jira_client.py  slack_notifier.py
knowledge/frameworks/: ISO_27001_2022.txt  SOC2_TSC.txt
knowledge/policies/: sample_information_security_policy.md
knowledge/questionnaires/: sample_questions.txt
tests/: conftest.py  test_ai_registry.py  test_audit_narrative.py  test_control_mapping.py  test_document_loader.py  test_drift_checker.py  test_evidence_reviewer.py  test_evidence_scorer.py  test_memory.py  test_policy_drafter.py  test_providers.py  test_questionnaire_responder.py  test_tprm_triage.py  test_vector_store.py  test_vendor_classifier.py
tools/: __init__.py  drift_checker.py  evidence_scorer.py  vendor_classifier.py
ui/: app.py
