[project]
name = "grc-engineered"
version = "0.1.0"
description = "Engineering-grade GRC automation — seven AI agents for control mapping, evidence review, TPRM triage, policy drafting, and AI governance"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Zeshan Ahmad" }
]
requires-python = ">=3.11"
keywords = [
    "grc", "compliance", "ai-agents", "claude-api", "anthropic",
    "iso-27001", "soc2", "nist-csf", "iso-42001", "eu-ai-act",
    "tprm", "cybersecurity", "oscal"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
