[project]
name = "grc-engineered"
version = "0.1.0"
description = "Engineering-grade GRC automation — seven AI agents for control mapping, evidence review, TPRM triage, policy drafting, and AI governance"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Zeshan Ahmad" }
]
requires-python = ">=3.11"
keywords = [
    "grc", "compliance", "ai-agents", "claude-api", "anthropic",
    "iso-27001", "soc2", "nist-csf", "iso-42001", "eu-ai-act",
    "tprm", "cybersecurity", "oscal"
]

dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "httpx>=0.27.0",
    # Required for Ollama support (set LLM_PROVIDER=ollama in .env to use free local models)
    "openai>=1.0.0",
]

[project.optional-dependencies]
# Vector store for Questionnaire Responder (requires 64-bit Python on Windows)
vector = ["chromadb>=0.5.0"]
# Optional: Slack alert integration
slack = ["slack-sdk>=3.33.0"]
# Optional: Jira ticket creation
jira = ["jira>=3.8.0"]
# All optional integrations at once
all = ["chromadb>=0.5.0", "slack-sdk>=3.33.0", "jira>=3.8.0"]

[tool.uv]
# Resolve packages for 64-bit Windows and all other platforms.
# chromadb/onnxruntime have no 32-bit Windows wheels; use 64-bit Python on Windows.
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform != 'win32'",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
